iot-devices-simulator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
spec:
  replicas: 0
  template:
    spec:
      containers:
        - name: simulator
          image: ihorlapka/iot-simulator
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: app-config
              mountPath: /config/application.yaml
              subPath: application.yaml
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 128Mi
              cpu: 128m
          readinessProbe:
            httpGet:
              path: /iot-device-connector/actuator/health/readiness
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /iot-device-connector/actuator/health/liveness
              port: 8086
            initialDelaySeconds: 80
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
      imagePullSecrets:
        - name: dockercred
      volumes:
        - name: app-config
          configMap:
            name: simulator-config
